--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ env:
     - INCLUDE_PATH=${FLEX_HOME}/include:${INCLUDE_PATH}
     - CPLUS_INCLUDE_PATH=${FLEX_HOME}/include:${CPLUS_INCLUDE_PATH}
     - INCLUDE=${FLEX_HOME}/include:${INCLUDE}
+    - SUITESPARSE_HOME=`pwd`/suitesparse
+    - SUITESPARSE=`pwd`/suitesparse
 
 addons:
   apt:
@@ -84,6 +86,42 @@ jobs:
       script: true
       name: "Installing dependencies..."
       install:
+        # - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
+        # - |
+        #   if [ ! -f "${CUDA_HOME}/lib64/libcudart.so" ]; then
+        #   INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
+        #   wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
+        #   sudo dpkg -i ${INSTALLER}
+        #   wget https://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/7fa2af80.pub
+        #   sudo apt-key add 7fa2af80.pub
+        #   sudo apt update -qq
+        #   sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
+        #   sudo apt clean
+        #   fi
+        # - sudo ln -s ${CUDA_HOME} /usr/local/cuda
+        # - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
+        # - PATH=${CUDA_HOME}/bin:${PATH}
+        - |
+          if [ ! -f "${MPI_HOME}/lib/libmpi.so" ]; then 
+          sh ./get_ompi.sh > /dev/null
+          fi
+        - |
+          if [ ! -f "$BISON_HOME/bin/bison" ]; then 
+          sh ./get_bison.sh > /dev/null
+          fi
+        - | 
+          if [ ! -f "${FLEX_HOME}/bin/flex" ]; then 
+          sh ./get_flex.sh > /dev/null
+          fi
+        - |
+          if [ ! -f "${SUITESPARSE}/lib/libcxsparse.so" ]; then
+          sh ./get_suitesparse.sh > /dev/null
+          fi
+    - &shared 
+      stage: MGS 
+      before_install:
+        - export BUILD_SYSTEM=--as-MGS
+      install:
         - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
         - |
           if [ ! -d "${CUDA_HOME}" ]; then
@@ -99,55 +137,29 @@ jobs:
         - sudo ln -s ${CUDA_HOME} /usr/local/cuda
         - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
         - PATH=${CUDA_HOME}/bin:${PATH}
-        - sh ./get_ompi.sh > /dev/null
-        - sh ./get_bison.sh > /dev/null
-        - sh ./get_flex.sh > /dev/null
-        - sh ./get_suitesparse.sh > /dev/null
-    #- &shared 
-      #stage: MGS 
-      #before_install:
-        #- export BUILD_SYSTEM=--as-MGS
-      #install:
-        #- CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
-        #- |
-          #if [ ! -d "${CUDA_HOME}" ]; then
-          #INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
-          #wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
-          #sudo dpkg -i ${INSTALLER}
-          #wget https://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/7fa2af80.pub
-          #sudo apt-key add 7fa2af80.pub
-          #sudo apt update -qq
-          #sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
-          #sudo apt clean
-          #fi
-        #- sudo ln -s ${CUDA_HOME} /usr/local/cuda
-        #- LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
-        #- PATH=${CUDA_HOME}/bin:${PATH}
-        #- PATH=${PATH}:${PWD}
-        #- pip install --trusted-host pypi.python.org -r requirements.txt --user
-        #- |
-          #if [ "$BUILD_SYSTEM" == "--as-NTS-NVU" ]; then 
-          #export SUITESPARSE_HOME=`pwd`/suitesparse
-          #export SUITESPARSE=`pwd`/suitesparse
-          #export PATH=${SUITESPARSE_HOME}/bin:${PATH}
-          #export LD_LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LD_LIBRARY_PATH}
-          #export LD_RUN_PATH=${SUITESPARSE_HOME}/lib:${LD_RUN_PATH}
-          #export LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LIBRARY_PATH}
-          #export CPATH=${SUITESPARSE_HOME}/include:${CPATH}
-          #export C_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${C_INCLUDE_PATH}
-          #export INCLUDE_PATH=${SUITESPARSE_HOME}/include:${INCLUDE_PATH}
-          #export CPLUS_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${CPLUS_INCLUDE_PATH}
-          #export INCLUDE=${SUITESPARSE_HOME}/include:${INCLUDE}
-          #fi
-        #- echo "Testing Docker Hub credentials"
-          ##- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-        #- echo "Docker Hub credentials are working"
-          ##- docker build -t build-springxd-base .
-      #script:
-        #- echo "$BUILD_SYSTEM"
-        #- source set_env
-        #- source set_env
-        #- ./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null
+        - PATH=${PATH}:${PWD}
+        - pip install --trusted-host pypi.python.org -r requirements.txt --user
+        - |
+          if [ "$BUILD_SYSTEM" == "--as-NTS-NVU" ]; then 
+          export PATH=${SUITESPARSE_HOME}/bin:${PATH}
+          export LD_LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LD_LIBRARY_PATH}
+          export LD_RUN_PATH=${SUITESPARSE_HOME}/lib:${LD_RUN_PATH}
+          export LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LIBRARY_PATH}
+          export CPATH=${SUITESPARSE_HOME}/include:${CPATH}
+          export C_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${C_INCLUDE_PATH}
+          export INCLUDE_PATH=${SUITESPARSE_HOME}/include:${INCLUDE_PATH}
+          export CPLUS_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${CPLUS_INCLUDE_PATH}
+          export INCLUDE=${SUITESPARSE_HOME}/include:${INCLUDE}
+          fi
+        - echo "Testing Docker Hub credentials"
+          #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+        - echo "Docker Hub credentials are working"
+          #- docker build -t build-springxd-base .
+      script:
+        - echo "$BUILD_SYSTEM"
+        - source set_env
+        - source set_env
+        - ./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null
     #- stage: NGS 
       #<<: *test
       #before_install:
