--- a/.travis.yml
+++ b/.travis.yml
@@ -86,21 +86,23 @@ jobs:
       script: true
       name: "Installing dependencies..."
       install:
-        # - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
-        # - |
-        #   if [ ! -f "${CUDA_HOME}/lib64/libcudart.so" ]; then
-        #   INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
-        #   wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
-        #   sudo dpkg -i ${INSTALLER}
-        #   wget https://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/7fa2af80.pub
-        #   sudo apt-key add 7fa2af80.pub
-        #   sudo apt update -qq
-        #   sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
-        #   sudo apt clean
-        #   fi
-        # - sudo ln -s ${CUDA_HOME} /usr/local/cuda
-        # - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
-        # - PATH=${CUDA_HOME}/bin:${PATH}
+        # always need CUDA install for OpenMPI #
+        - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
+        - |
+          if [ ! -f "${CUDA_HOME}/lib64/libcudart.so" ]; then
+          INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
+          wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
+          sudo dpkg -i ${INSTALLER}
+          wget https://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/7fa2af80.pub
+          sudo apt-key add 7fa2af80.pub
+          sudo apt update -qq
+          sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
+          sudo apt clean
+          fi
+        - sudo ln -s ${CUDA_HOME} /usr/local/cuda
+        - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
+        - PATH=${CUDA_HOME}/bin:${PATH}
+        - echo "${MPI_HOME} ${BISON_HOME} ${FLEX_HOME} ${SUITESPARSE}"
         - |
           if [ ! -f "${MPI_HOME}/lib/libmpi.so" ]; then 
           sh ./get_ompi.sh > /dev/null
