--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - CUDA_SHORT=9.2
     - CUDA_APT=9-2
     - UBUNTU_VERSION=ubuntu1604
-    - MPI_HOME=`pwd`/ompi
+    - MPI_HOME=${TRAVIS_BUILD_DIR}/ompi
     - PATH=${MPI_HOME}/bin:${PATH}
     - LD_LIBRARY_PATH=${MPI_HOME}/lib:${LD_LIBRARY_PATH}
     - LD_RUN_PATH=${MPI_HOME}/lib:${LD_RUN_PATH}
@@ -30,7 +30,7 @@ env:
     - C_INCLUDE_PATH=${MPI_HOME}/include:${C_INCLUDE_PATH}
     - INCLUDE_PATH=${MPI_HOME}/include:${INCLUDE_PATH}
     - CPLUS_INCLUDE_PATH=${MPI_HOME}/include:${CPLUS_INCLUDE_PATH}
-    - BISON_HOME=`pwd`/bison
+    - BISON_HOME=${TRAVIS_BUILD_DIR}/bison
     - PATH=${BISON_HOME}/bin:${PATH}
     - LD_LIBRARY_PATH=${BISON_HOME}/lib:${LD_LIBRARY_PATH}
     - LD_RUN_PATH=${BISON_HOME}/lib:${LD_RUN_PATH}
@@ -40,7 +40,7 @@ env:
     - INCLUDE_PATH=${BISON_HOME}/include:${INCLUDE_PATH}
     - CPLUS_INCLUDE_PATH=${BISON_HOME}/include:${CPLUS_INCLUDE_PATH}
     - INCLUDE=${BISON_HOME}/include:${INCLUDE}
-    - FLEX_HOME=`pwd`/flex
+    - FLEX_HOME=${TRAVIS_BUILD_DIR}/flex
     - PATH=${FLEX_HOME}/bin:${PATH}
     - LD_LIBRARY_PATH=${FLEX_HOME}/lib:${LD_LIBRARY_PATH}
     - LD_RUN_PATH=${FLEX_HOME}/lib:${LD_RUN_PATH}
@@ -50,8 +50,8 @@ env:
     - INCLUDE_PATH=${FLEX_HOME}/include:${INCLUDE_PATH}
     - CPLUS_INCLUDE_PATH=${FLEX_HOME}/include:${CPLUS_INCLUDE_PATH}
     - INCLUDE=${FLEX_HOME}/include:${INCLUDE}
-    - SUITESPARSE_HOME=`pwd`/suitesparse
-    - SUITESPARSE=`pwd`/suitesparse
+    - SUITESPARSE_HOME=${TRAVIS_BUILD_DIR}/suitesparse
+    - SUITESPARSE=${TRAVIS_BUILD_DIR}/suitesparse
 
 addons:
   apt:
