add Dockerfile test 2 stage travis.yml

--- a/mdl/Makefile
+++ b/mdl/Makefile
@@ -102,8 +102,8 @@ mdl.tab.h:  parser/mdl.y
 	cd parser; mv mdl.tab.h ../include; cd -
 	
 
-#parser/mdl.tab.c: parser/mdl.y
-#	cd parser; bison -v -d -b mdl mdl.y; cd ..
+parser/mdl.tab.c: parser/mdl.y
+	cd parser; bison -v -d -b mdl mdl.y; cd ..
 
 # Scanner targets
 ifeq ($(FLEXFIXER), True)
@@ -124,6 +124,10 @@ scanner/lex.yy.o: scanner/lex.yy.cc scanner/mdl.l
 
 # Include the C include dependencies
 #include $(OBJS:.o=.d)
+$(OBJS) : | $(OBJS_DIR)
+
+$(OBJS_DIR):
+	mkdir $(OBJS_DIR)
 
 # Our Suffix rules
 #%.d: 
