--- a/mdl/Makefile
+++ b/mdl/Makefile
@@ -100,8 +100,8 @@ include sources.mk
 mdl.tab.h:  parser/mdl.y
 	cd parser; bison -v -d -b mdl mdl.y; cd ..
 
-#parser/mdl.tab.c: parser/mdl.y
-#	cd parser; bison -v -d -b mdl mdl.y; cd ..
+parser/mdl.tab.c: parser/mdl.y
+	cd parser; bison -v -d -b mdl mdl.y; cd ..
 
 # Scanner targets
 ifeq ($(FLEXFIXER), True)
@@ -122,6 +122,10 @@ scanner/lex.yy.o: scanner/lex.yy.cc scanner/mdl.l
 
 # Include the C include dependencies
 #include $(OBJS:.o=.d)
+$(OBJS) : | $(OBJS_DIR)
+
+$(OBJS_DIR):
+	mkdir $(OBJS_DIR)
 
 # Our Suffix rules
 #%.d: 
