--- a/.travis.yml
+++ b/.travis.yml
@@ -119,8 +119,9 @@ jobs:
           if [ ! -f "${SUITESPARSE}/lib/libcxsparse.so" ]; then
           sh ./get_suitesparse.sh > /dev/null
           fi
-    - &shared 
-      stage: MGS 
+    #- &shared 
+      #stage: MGS 
+    - stage: MGS 
       before_install:
         - export BUILD_SYSTEM=--as-MGS
       install:
@@ -162,26 +163,26 @@ jobs:
         - source set_env
         - source set_env
         - ./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null
-    - stage: NGS 
-      <<: *test
-      before_install:
-        - export BUILD_SYSTEM=--as-NGS
-    - stage: NTS 
-      <<: *test
-      before_install:
-        - export BUILD_SYSTEM=--as-NTS
-    - stage: NTS-NVU 
-      <<: *test
-      before_install:
-        - export BUILD_SYSTEM=--as-NTS-NVU
-    - stage: deploy
-      after_success:
-        - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
-          #  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
-          #  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-          #  - export REPO=jayjohnson/springxd-base
-          #  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-          #  - docker build -f Dockerfile -t $REPO:$COMMIT .
-          #  - docker tag $REPO:$COMMIT $REPO:$TAG
-          #  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-          #  - docker push $REPO
+    #- stage: NGS 
+      #<<: # - stag*test
+      #befo# - stagre_install:
+        #- # - stagexport BUILD_SYSTEM=--as-NGS
+    #- stag# - stage: NTS 
+      #<<: # - stag*test
+      #befo# - stagre_install:
+        #- # - stagexport BUILD_SYSTEM=--as-NTS
+    #- stag# - stage: NTS-NVU 
+      #<<: # - stag*test
+      #befo# - stagre_install:
+        #- # - stagexport BUILD_SYSTEM=--as-NTS-NVU
+    #- stag# - stage: deploy
+      #afte# - stagr_success:
+        #- # - stagecho "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
+          ## - stag#  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
+          ## - stag#  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+          ## - stag#  - export REPO=jayjohnson/springxd-base
+          ## - stag#  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+          ## - stag#  - docker build -f Dockerfile -t $REPO:$COMMIT .
+          ## - stag#  - docker tag $REPO:$COMMIT $REPO:$TAG
+          ## - stag#  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
+          ## - stag#  - docker push $REPO
