--- a/.travis.yml
+++ b/.travis.yml
@@ -163,25 +163,25 @@ jobs:
         - source set_env
         - ./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null
     - stage: NGS 
-      <<: *test
+      <<: *shared
       before_install:
         - export BUILD_SYSTEM=--as-NGS
-    #- stage: NTS 
-      #<<: *test
-      #before_install:
-        #- export BUILD_SYSTEM=--as-NTS
-    #- stage: NTS-NVU 
-      #<<: *test
-      #before_install:
-        #- export BUILD_SYSTEM=--as-NTS-NVU
-    #- stage: deploy
-      #after_success:
-        #- echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
-          ##  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
-          ##  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-          ##  - export REPO=jayjohnson/springxd-base
-          ##  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-          ##  - docker build -f Dockerfile -t $REPO:$COMMIT .
-          ##  - docker tag $REPO:$COMMIT $REPO:$TAG
-          ##  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-          ##  - docker push $REPO
+    - stage: NTS 
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-NTS
+    - stage: NTS-NVU 
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-NTS-NVU
+    - stage: deploy
+      after_success:
+        - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
+          #  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
+          #  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+          #  - export REPO=jayjohnson/springxd-base
+          #  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+          #  - docker build -f Dockerfile -t $REPO:$COMMIT .
+          #  - docker tag $REPO:$COMMIT $REPO:$TAG
+          #  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
+          #  - docker push $REPO
