refine definition suitesparse travis.yml show output to NTS build

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,15 @@ env:
     - INCLUDE=${FLEX_HOME}/include:${INCLUDE}
     - SUITESPARSE_HOME=${TRAVIS_BUILD_DIR}/suitesparse
     - SUITESPARSE=${TRAVIS_BUILD_DIR}/suitesparse
+    - PATH=${SUITESPARSE_HOME}/bin:${PATH}
+    - LD_LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LD_LIBRARY_PATH}
+    - LD_RUN_PATH=${SUITESPARSE_HOME}/lib:${LD_RUN_PATH}
+    - LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LIBRARY_PATH}
+    - CPATH=${SUITESPARSE_HOME}/include:${CPATH}
+    - C_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${C_INCLUDE_PATH}
+    - INCLUDE_PATH=${SUITESPARSE_HOME}/include:${INCLUDE_PATH}
+    - CPLUS_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${CPLUS_INCLUDE_PATH}
+    - INCLUDE=${SUITESPARSE_HOME}/include:${INCLUDE}
 
 addons:
   apt:
@@ -141,18 +150,6 @@ jobs:
         - PATH=${CUDA_HOME}/bin:${PATH}
         - PATH=${PATH}:${PWD}
         - pip install --trusted-host pypi.python.org -r requirements.txt --user
-        - |
-          if [ "$BUILD_SYSTEM" == "--as-NTS-NVU" ]; then 
-          export PATH=${SUITESPARSE_HOME}/bin:${PATH}
-          export LD_LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LD_LIBRARY_PATH}
-          export LD_RUN_PATH=${SUITESPARSE_HOME}/lib:${LD_RUN_PATH}
-          export LIBRARY_PATH=${SUITESPARSE_HOME}/lib:${LIBRARY_PATH}
-          export CPATH=${SUITESPARSE_HOME}/include:${CPATH}
-          export C_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${C_INCLUDE_PATH}
-          export INCLUDE_PATH=${SUITESPARSE_HOME}/include:${INCLUDE_PATH}
-          export CPLUS_INCLUDE_PATH=${SUITESPARSE_HOME}/include:${CPLUS_INCLUDE_PATH}
-          export INCLUDE=${SUITESPARSE_HOME}/include:${INCLUDE}
-          fi
         - echo "Testing Docker Hub credentials"
           #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
         - echo "Docker Hub credentials are working"
@@ -170,6 +167,11 @@ jobs:
       <<: *shared
       before_install:
         - export BUILD_SYSTEM=--as-NTS
+      script:
+        - echo "$BUILD_SYSTEM"
+        - source set_env
+        - source set_env
+        - ./build_script -p LINUX $BUILD_SYSTEM --rebuild 
     - stage: NTS-NVU 
       <<: *shared
       before_install:
