--- a/.travis.yml
+++ b/.travis.yml
@@ -151,7 +151,7 @@ jobs:
         - PATH=${PATH}:${PWD}
         - pip install --trusted-host pypi.python.org -r requirements.txt --user
         #- echo "Testing Docker Hub credentials"
-          #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+        #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
         #- echo "Docker Hub credentials are working"
           #- docker build -t build-springxd-base .
       script:
@@ -179,6 +179,11 @@ jobs:
       <<: *shared
       before_install:
         - export BUILD_SYSTEM=--as-NTS
+      script:
+        - echo "$BUILD_SYSTEM"
+        - source set_env
+        - source set_env
+        - ./build_script -p LINUX $BUILD_SYSTEM --rebuild 
     - stage: NTS-NVU 
       <<: *shared
       before_install:
