--- a/.travis.yml
+++ b/.travis.yml
@@ -177,6 +177,8 @@ jobs:
       before_install:
         - export BUILD_SYSTEM=--as-NTS-NVU
     - stage: deploy
+      script:
+        - ls $SUITESPARSE_HOME/*
       after_success:
         - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
           #  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
