--- a/.travis.yml
+++ b/.travis.yml
@@ -175,9 +175,11 @@ jobs:
     - stage: NTS-NVU 
       <<: *shared
       script:
-        - ls $SUITESPARSE_HOME/*
+        - ls $SUITESPARSE_HOME
         - ls $FLEX_HOME
         - ls $TRAVIS_BUILD_DIR
+        - echo $FLEX_HOME
+        - echo $SUITESPARSE_HOME
       before_install:
         - export BUILD_SYSTEM=--as-NTS-NVU
     - stage: deploy
