--- a/.travis.yml
+++ b/.travis.yml
@@ -128,6 +128,10 @@ jobs:
           if [ ! -f "${SUITESPARSE}/lib/libcxsparse.so" ]; then
           sh ./get_suitesparse.sh > /dev/null
           fi
+        - ls $SUITESPARSE_HOME/include
+        - ls $SUITESPARSE_HOME
+        - ls $SUITESPARSE_HOME/lib
+        - ls $SUITESPARSE_HOME
     - &shared 
       stage: MGS 
       before_install:
@@ -176,7 +180,7 @@ jobs:
       <<: *shared
       script:
         - ls $SUITESPARSE_HOME/include
-        - ls $SUITESPARSE_HOME
+        - ls $SUITESPARSE_HOME/lib
         - ls $FLEX_HOME
         - ls $TRAVIS_BUILD_DIR
         - echo $FLEX_HOME
