--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,7 @@ jobs:
           fi
         - travis_wait sh -c "pwd 2>&1 | tee /tmp/build.log"
         - cat /tmp/build.log
-        - travis_wait 30 sh -c "cd ${TRAVIS_BUILD_DIR} && ./build_script -p LINUX $BUILD_SYSTEM --rebuild &> /tmp/build.log"
+        - travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild |& tee /tmp/build.log"
         - tail -n 40 /tmp/build.log
           #- travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null"
         #- travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null | tee /tmp/build.log "
