--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,9 @@ jobs:
           fi
         - travis_wait sh -c "pwd 2>&1 | tee /tmp/build.log"
         - cat /tmp/build.log
-        - travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild |& tee /tmp/build.log"
+        - echo "./build_script -p LINUX $BUILD_SYSTEM --rebuild |& tee /tmp/build.log" > quick_build.sh
+        - chmod +x ./quick_build.sh
+        - travis_wait 30 sh -c ./quick_build.sh 
         - tail -n 40 /tmp/build.log
           #- travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null"
         #- travis_wait 30 sh -c "./build_script -p LINUX $BUILD_SYSTEM --rebuild > /dev/null | tee /tmp/build.log "
